# advent-of-code

./: .gitattributes  .gitignore  Cargo.toml  README.md
.git-crypt/keys/default/0/: 09A6B71F93CBE1AEAE4DB762CB8B113CE6F26053.gpg
.github/workflows/: rust.yml
shared/: Cargo.toml
shared/src/: input.rs  internal.rs  lib.rs  math.rs  num_traits.rs  str_trait.rs
template/: Cargo.toml
template/src/: main.rs
year-2015/: Cargo.toml
year-2015/input/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
year-2015/src/: main.rs
year-2015/test-input/: day-1.txt
year-2024/: Cargo.toml
year-2024/input/: day-1.txt  day-10.txt  day-11.txt  day-12.txt  day-13.txt  day-14.txt  day-15.txt  day-16.txt  day-17.txt  day-18.txt  day-19.txt  day-2.txt  day-20.txt  day-21.txt  day-22.txt  day-23.txt  day-24.txt  day-25.txt  day-3.txt  day-4.txt  day-5.txt  day-6.txt  day-7.txt  day-8.txt  day-9.txt
year-2024/src/: main.rs
