[workspace]
members = ["shared", "template", "year-2015", "year-2024"]
resolver = "2"

[workspace.dependencies]
hashbrown = "0.15"
itertools = "0.13"
shared = { path = "shared" }
regex = { version = "1.11", default-features = true, features = [
    "std",
    "perf",
] }
nalgebra = "0.33"
pathfinding = "4.12"
md5 = "0.7.0"
rayon = "1.10.0"
