[package]
name = "year-2015"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = { workspace = true }
itertools = { workspace = true }
shared = { workspace = true, features = ["runner"] }
md5 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
shared = { workspace = true }

[[bin]]
name = "year-2015_day-1"
path = "src/bin/day-1.rs"

[[bin]]
name = "year-2015_day-2"
path = "src/bin/day-2.rs"

[[bin]]
name = "year-2015_day-3"
path = "src/bin/day-3.rs"

[[bin]]
name = "year-2015_day-4"
path = "src/bin/day-4.rs"

[[bin]]
name = "year-2015_day-5"
path = "src/bin/day-5.rs"
