[package]
name = "year-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { workspace = true }
shared = { workspace = true }
regex = { workspace = true }

[[bin]]
name = "year-2024_day-1"
path = "src/bin/day-1.rs"

[[bin]]
name = "year-2024_day-2"
path = "src/bin/day-2.rs"

[[bin]]
name = "year-2024_day-3"
path = "src/bin/day-3.rs"

[[bin]]
name = "year-2024_day-4"
path = "src/bin/day-4.rs"

[[bin]]
name = "year-2024_day-5"
path = "src/bin/day-5.rs"

[[bin]]
name = "year-2024_day-6"
path = "src/bin/day-6.rs"

[[bin]]
name = "year-2024_day-7"
path = "src/bin/day-7.rs"
