[package]
name = "year-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { workspace = true }
itertools = { workspace = true }
shared = { workspace = true, features = ["runner"] }
regex = { workspace = true }
nalgebra = { workspace = true }
pathfinding = { workspace = true }

[dev-dependencies]
shared = { workspace = true }

[[bin]]
name = "year-2024_day-1"
path = "src/bin/day-1.rs"

[[bin]]
name = "year-2024_day-2"
path = "src/bin/day-2.rs"

[[bin]]
name = "year-2024_day-3"
path = "src/bin/day-3.rs"

[[bin]]
name = "year-2024_day-4"
path = "src/bin/day-4.rs"

[[bin]]
name = "year-2024_day-5"
path = "src/bin/day-5.rs"

[[bin]]
name = "year-2024_day-6"
path = "src/bin/day-6.rs"

[[bin]]
name = "year-2024_day-7"
path = "src/bin/day-7.rs"

[[bin]]
name = "year-2024_day-8"
path = "src/bin/day-8.rs"

[[bin]]
name = "year-2024_day-9"
path = "src/bin/day-9.rs"

[[bin]]
name = "year-2024_day-10"
path = "src/bin/day-10.rs"

[[bin]]
name = "year-2024_day-11"
path = "src/bin/day-11.rs"

[[bin]]
name = "year-2024_day-12"
path = "src/bin/day-12.rs"

[[bin]]
name = "year-2024_day-13"
path = "src/bin/day-13.rs"

[[bin]]
name = "year-2024_day-14"
path = "src/bin/day-14.rs"

[[bin]]
name = "year-2024_day-15"
path = "src/bin/day-15.rs"

[[bin]]
name = "year-2024_day-16"
path = "src/bin/day-16.rs"

[[bin]]
name = "year-2024_day-17"
path = "src/bin/day-17.rs"

[[bin]]
name = "year-2024_day-18"
path = "src/bin/day-18.rs"

[[bin]]
name = "year-2024_day-19"
path = "src/bin/day-19.rs"

[[bin]]
name = "year-2024_day-20"
path = "src/bin/day-20.rs"

[[bin]]
name = "year-2024_day-21"
path = "src/bin/day-21.rs"

[[bin]]
name = "year-2024_day-22"
path = "src/bin/day-22.rs"

[[bin]]
name = "year-2024_day-23"
path = "src/bin/day-23.rs"

[[bin]]
name = "year-2024_day-24"
path = "src/bin/day-24.rs"

[[bin]]
name = "year-2024_day-25"
path = "src/bin/day-25.rs"
